--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YAX Coming Soon HTML5/CSS3 Free Template</title>
-    <meta name="description" content="YAX Coming Soon HTML5/CSS3 Free Template by Morteza Aghili" />
-    <meta name="keywords" content="HTML5, css3, Free Template, web design, flat design, inspiration, responsive, svg, pseudo-elements" />
-    <meta name="author" content="Morteza Aghili" />
+
+    <title>{{ page.title | default: site.title }}</title>
+    {% if page.excerpt %}<meta name="description" content="{{ page.excerpt | strip_html }}">{% endif %}
+    {% if page.tags %}<meta name="keywords" content="{{ page.tags | join: ', ' }}">{% endif %}
+    {% if site.author %}<meta name="author" content="{{ site.author }}" />{% endif %}
 
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
@@ -29,8 +30,8 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <h1><i class="fa fa-clock-o" style="color:white"></i></h1>
-                        <h2>your awesome site</h2>
-                        <p>a coming soon template
+                        <h2>{{ page.title | default: site.title }}</h2>
+                        <p>{{ page.excerpt | default: site.description }}
                         </p>
                     </div>
                 </div>
@@ -41,8 +42,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center">
-                    <h3>Website is coming soon</h3>
-                    <p>Tell the users that your website is not active yet. Put the reason to subscribe for the notification in this paragraph. Tell them about their problems which you would like to solve. Don’t forget the final call to action.</p>
+                    {{ content }}
                 </div>
             </div>
 
@@ -56,24 +56,31 @@
 
             <div class="row">
                 <div class="col-sm-12">
-                    <h3>Subscribe for update</h3>
+                    <h3>{{ site.data.messages.locales[site.locale].Learn_More }}</h3>
+                    <!-- not supported in Jekyll:
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Email">
                         <span class="input-group-btn">
                             <button class="btn btn-danger" type="button"><i class="fa fa-check"></i></button>
                         </span>
-                    </div>
-                    <br>
+                    </div> -->
+                    <br> 
                     <ul class="list-unstyled list-inline">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a>
-                        </li>
-
+                        {% if site.owner.email %}<li>
+                            <a href="mailto:{{ site.owner.email }}"><i class="fa fa-envelope"></i></a>
+                        </li>{% endif %}
+                        {% if site.owner.facebook %}<li>
+                            <a href="http://facebook.com/{{ site.owner.facebook }}"><i class="fa fa-facebook"></i></a>
+                        </li>{% endif %}
+                        {% if site.owner.twitter %}<li>
+                            <a href="http://twitter.com/{{ site.owner.twitter }}"><i class="fa fa-twitter"></i></a>
+                        </li>{% endif %}
+                        {% if site.owner.google_plus %}<li>
+                            <a href="https://google.com/{{ site.owner.google_plus }}"><i class="fa fa-google-plus"></i></a>
+                        </li>{% endif %}    
+                        {% if site.owner.instagram %}<li>
+                            <a href="http://instagram.com/{{ site.owner.instagram }}"><i class="fa fa-instagram"></i></a>
+                        </li>{% endif %}                
                     </ul>
                 </div>
             </div>
@@ -85,10 +92,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 text-center">
-                    <p>2015 - YourAwesomeSite</p>
+                    <p>2015 - {{ site.owner.name }}</p>
 
-                    <P>made with <i class="fa fa-heart"></i> by
-                        <a target="_blank" href="http://mortezaaghili.github.io/">Morteza Aghili</a> | Designed by
+                    <P> {% if site.owner.aboutlink.url %}<a href="{{ site.owner.aboutlink.url }}">{{ site.owner.aboutlink.caption | default: "About" }}</a> | {% endif %}
+                        Page and Design by <a target="_blank" href="http://mortezaaghili.github.io/">M. Aghili</a> + 
                         <a target="_blank" href="https://www.behance.net/gallery/18421675/Free-Bootstrap-Psd-Coming-Soon-Template">Ilya B.</a>
                     </P>
                 </div>
@@ -98,11 +105,11 @@
 
 
 
-
     <script>
         $('.countdown').ClassyCountdown({
-            theme: "red",
-            end: $.now() + 10000
+            theme: "{{ site.countdown.theme }}",
+            now: $.now() / 1000,
+            end: Date.UTC({{ site.countdown.year }}, {{ site.countdown.month }} - 1, {{ site.countdown.day }}, {{ site.countdown.hour }}, {{ site.countdown.minute }}, 0) / 1000
         });
     </script>
 </body>
